do task by using stream api)